--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   image_card: ^0.0.4
   google_nav_bar: ^5.0.6
   line_icons: ^2.0.3
+  http: ^1.2.2
+  toastification: ^2.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
